--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,8 @@ li {
 .story1,
 .story2,
 .story3 {
-  height: 60vh;
+  margin: 5px;
+  border-radius: 10px;
   position: relative;
 }
 
@@ -127,7 +128,7 @@ li {
 
 .navbar .logo-image img {
   width: auto;
-  height: 80px;
+  height: 60px;
 }
 
 .navbar .logo-text {
@@ -249,12 +250,15 @@ li {
 }
 
 .story1 {
-  background: linear-gradient(to right, transparent, rgb(255, 255, 255)),
+  background: linear-gradient(to right, transparent, rgba(175, 174, 255, 1)),
     url(../assets/images/fort1.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  overflow: auto;
+  background-blend-mode: multiply;
+  box-shadow: inset 0 0 0 2000px rgba(255, 255, 255, 0.7);
 }
 
 .story2 {
@@ -264,19 +268,34 @@ li {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  overflow: auto;
+  box-shadow: inset 0 0 0 2000px rgba(255, 255, 255, 0.7);
 }
 
 .story3 {
-  background: linear-gradient(to right, transparent, rgb(255, 255, 255)),
+  background: linear-gradient(to right, transparent, rgb(175, 174, 255, 1)),
     url(../assets/images/fort3.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  overflow: auto;
+  box-shadow: inset 0 0 0 2000px rgba(255, 255, 255, 0.7);
+}
+
+.frame {
+  width: auto;
+  height: auto;
+  background: rgb(255, 255, 255);
+  margin: auto;
+  padding: 5px 5px;
+  border-radius: 10px;
 }
 
 .img-fluid {
-  border-radius: 20px;
+  max-width: 100%;
+  overflow: auto;
+  border-radius: 10px;
 }
 
 /****************/
@@ -312,7 +331,7 @@ li {
 .information .container-fluid .row div:nth-child(2) {
   background-color: var(--primary-light);
 }
-
+z
 /******************/
 /*     Button     */
 /******************/
